fixed gap in LocationCard

--- a/components/LocationCard/LocationCard.module.css
+++ b/components/LocationCard/LocationCard.module.css
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 16px;
+  gap: 12px;
 }
 
 .locationType {
